fix(dashboard): make code text in darkmode visible

--- a/dashboard/styles/generic.scss
+++ b/dashboard/styles/generic.scss
@@ -28,8 +28,6 @@ blockquote {
     border-left: 4px solid $gray-transparent; // overwrite this in the individual styles
 }
 
-code {
-    color: var(--bs-body-color) !important; // overwrite
 }
 
 .dyslexic {
